<resources>
    <string name="app_name">RealEstateManager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="title_activity_maps">Map</string>

    //ADD FORM ACTIVITY
    <string name="place_created">Place created</string>
    <string name="field_missing">You have to enter at least a price, a type of place, an address and the real estate manager in charge of this place!</string>
    <string name="photo_missing">You have to upload at least one photo</string>
    <string name="description_photo_missing">You have to upload at least one photo and to write a description for each photo</string>
    <string name="place_updated">Place updated</string>
    <string name="toolbar_title_edit">Edit place</string>
    <string name="toolbar_title_add">Add a new place</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="way_to_get_photos_gallery">Pick from gallery</string>
    <string name="way_to_get_photos_camera">Take from camera</string>
    <string name="not_informed_yet">Not informed yet</string>
    <string name="not_informed">Not informed</string>
    <string name="toast_message_main_photo">This photo is saved as main photo</string>
    <string name="title_dialog_add_description">Add description :</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="toast_message_description_added">Description added!</string>
    <string name="toast_message_error_occurred">Error occurred</string>
    <string name="toast_message_no_image_chosen">No image chosen</string>
    <string name="notification_title">Real estate manager</string>
    <string name="title_dialog_choose_type_of_place">Select type of place :</string>
    <string name="button_generic_text_type_of_place">Type of place</string>
    <string name="toast_message_date_not_correct">You have to choose a passed or present date</string>

    //ADD FORM ACTIVITY XML FILE
    <string name="button_add_pictures">Add pictures</string>
    <string name="price_hint">Price (dollars)</string>
    <string name="surface_hint">Surface (m²)</string>
    <string name="number_of_rooms_hint">Number of rooms</string>
    <string name="nbr_of_bedrooms_hint">Number of bedrooms</string>
    <string name="nbr_of_bathrooms_hint">Number of bathrooms</string>
    <string name="description_hint">Description</string>
    <string name="street_nbr_hint">Number</string>
    <string name="street_name_hint">Street name</string>
    <string name="complement_hint">Complement</string>
    <string name="postal_code_hint">Postal code</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="real_estate_agent_hint">Real estate agent</string>
    <string name="date_of_sale_text_view_text">Date of sale: </string>

    //FOR MAP ACTIVITY
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="toast_message_user_location_not_found">User location not found, try again later</string>
    <string name="toast_message_place_location_not_found">Place location not found, try again later</string>
    <string name="toast_message_no_location_provider">No location provider found, try again later</string>

    //FOR SETTINGS ACTIVITY
    <string name="toolbar_title_settings">Settings</string>
    <string name="dialog_title_enter_new_name">Enter a new name :</string>
    <string name="toast_message_save_your_name">Click on button to save your name</string>
    <string name="dialog_title_save_your_name">Save your name</string>
    <string name="dialog_message_save_your_name">Click on the button to save your name</string>

    //FOR SETTINGS XML FILE
    <string name="your_name_setting">Your name</string>
    <string name="change_username_button">Change username</string>

    //FOR PLACE VIEWHOLDER
    <string name="status_sold">Sold</string>
    <string name="status_available">Available</string>

    //FOR DETAIL FRAGMENT
    <string name="app_mode_phone">phone</string>
    <string name="app_mode_tablet">tablet</string>
    <string name="no_place_for_the_moment">No place saved for the moment, click on the add button to create one!</string>
    <string name="no_item_selected">No item selected, click on one item of the list to display details</string>

    //FOR DETAIL FRAG XML
    <string name="creation_date_detail">Creation date:</string>
    <string name="date_of_sale_detail">Date of sale:</string>
    <string name="price_detail">Price</string>
    <string name="surface_detail">Surface</string>
    <string name="location_detail">Location:</string>
    <string name="interests_title_detail">Interests near this place:</string>

    //FOR INFORMATION FRAGMENT
    <string name="button_text_convert_to_euros">Convert to euros</string>
    <string name="button_text_convert_to_dollars">Convert to dollars</string>

    //FOR INFORMATION FRAG XML
    <string name="convert_price_button">Convert to euros</string>

    //FOR MAP FRAGMENT
    <string name="toast_message_address_not_found">Address not found</string>
    <string name="toast_message_no_internet">You don\'t have internet :( , please, try again later to display the map</string>

    //FOR MAIN ACTIVITY
    <string name="toast_message_no_internet_cant_access_to_map">You don\'t have internet, you can\'t access to this screen</string>
    <string name="toolbar_title">Real Estate Manager</string>

    //FOR SEARCH ACTIVITY
    <string name="dialog_title_select_status">Select status :</string>
    <string name="button_text_status">Status</string>
    <string name="button_text_type_of_place">Type of place</string>
    <string name="interests_title">Interests near this place :</string>
    <string name="toast_message_field_value_missing">You have to inform at least type of place</string>
    <string name="toast_message_no_result_found">No results found for theses criteria :(</string>
    <string name="dialog_no_results_found">No results found</string>
    <string name="dialog_message_try_again">Try with new criteria…</string>
    <string name="dialog_ok">Ok</string>

    //FOR SEARCH ACTIVITY XML FILE
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="nbr_of_photos">Number of photos</string>
    <string name="nbr_of_photos_hint">Type number of photos…</string>
    <string name="city_hint_search_activity">Type city here…</string>
    <string name="creation_date_search_activity">Creation date</string>
    <string name="date_of_sale_search_activity">Date of sale</string>
    <string name="button_search">Search</string>

    //FOR DIALOGS
    <string name="dialog_add_description">Type description here…</string>
    <string name="dialog_last_name">Last name</string>
    <string name="dialog_first_name">First name</string>

    //FOR INTEREST XML
    <string name="school">School</string>
    <string name="hospital">Hospital</string>
    <string name="market_place">Market place</string>
    <string name="theater">Theater</string>
    <string name="cinema">Cinema</string>
    <string name="park">Park</string>

    //FOR NAV HEADER
    <string name="app_name_nav_header">Real Estate Manager</string>

</resources>
